Web scraping for pokemon dataset

--- a/web_scraping/dataset_webscraping.ipynb
+++ b/web_scraping/dataset_webscraping.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,30 @@
     "    # Prepare stats as individual columns\n",
     "    stats = {stat['stat']['name']: stat['base_stat'] for stat in data['stats']}\n",
     "\n",
-    "    # Extract relevant information\n",
+    "    # Fetch evolution details\n",
+    "    evolutions = []\n",
+    "    evolution_chain_url = species_data.get('evolution_chain', {}).get('url', None)\n",
+    "    if evolution_chain_url:\n",
+    "        evolution_response = requests.get(evolution_chain_url)\n",
+    "        if evolution_response.status_code == 200:\n",
+    "            chain = evolution_response.json().get('chain', {})\n",
+    "            current_species = species_data['name']\n",
+    "            node = chain\n",
+    "\n",
+    "            # Traverse the evolution chain until we find the current species\n",
+    "            while node and node['species']['name'] != current_species:\n",
+    "                node = next((evo for evo in node.get('evolves_to', []) if evo['species']['name'] == current_species), None)\n",
+    "\n",
+    "            # If the species is found, retrieve all evolutions and their levels\n",
+    "            if node:\n",
+    "                evolutions_data = node.get('evolves_to', [])\n",
+    "                for evo in evolutions_data:\n",
+    "                    evolution_name = evo['species']['name'].capitalize()\n",
+    "                    min_level = next((detail.get('min_level') for detail in evo.get('evolution_details', []) if detail.get('min_level') is not None), None)\n",
+    "                    evolutions.append({'name': evolution_name, 'level': min_level})\n",
+    "\n",
+    "\n",
+    "    # Extract the information\n",
     "    pokemon_info = {\n",
     "        # pokemon number in pokédex\n",
     "        'id': data.get('id'),\n",
@@ -138,7 +161,11 @@
     "        'defense': stats.get('defense', None),\n",
     "        'special-attack': stats.get('special-attack', None),\n",
     "        'special-defense': stats.get('special-defense', None),\n",
-    "        'speed': stats.get('speed', None)\n",
+    "        'speed': stats.get('speed', None),\n",
+    "        \n",
+    "        # evolution details\n",
+    "        'name_evolutions': ', '.join([evo['name'] for evo in evolutions]) if evolutions else None,\n",
+    "        'level_evolutions': next((evo['level'] for evo in evolutions if evo['level']), None) if evolutions else None\n",
     "    }\n",
     "\n",
     "    return pokemon_info"
@@ -153,42 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching data for Pokémon ID 5...\n",
-      "Fetched data for Charmeleon\n",
-      "Fetching data for Pokémon ID 6...\n",
-      "Fetched data for Charizard\n",
-      "Fetching data for Pokémon ID 7...\n",
-      "Fetched data for Squirtle\n",
-      "Fetching data for Pokémon ID 8...\n",
-      "Fetched data for Wartortle\n",
-      "Fetching data for Pokémon ID 9...\n",
-      "Fetched data for Blastoise\n",
-      "Fetching data for Pokémon ID 10...\n",
-      "Fetched data for Caterpie\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Range of Pokémon IDs to scrape data. The PokéAPI has data for every Pokémon of the official Pokédex (up to 1025 pokémons)\n",
-    "start_id = 5\n",
-    "end_id = 10\n",
+    "start_id = 1\n",
+    "end_id = 1025\n",
     "\n",
     "# Fetch Pokémon data and store in a list\n",
     "pokemon_details = []\n",
     "\n",
     "for pokemon_id in range(start_id, end_id + 1):\n",
-    "    print(f\"Fetching data for Pokémon ID {pokemon_id}...\") #Prints for inform the user which pokemon is being fetched \n",
+    "    # Pokemon is being fetched \n",
     "    info = get_pokemon_info(pokemon_id)\n",
     "    \n",
     "    if info:\n",
-    "        print(f\"Fetched data for {info['name']}\") #Prints for inform the user that the pokemon was fetched\n",
+    "        # Pokemon fetched\n",
     "        pokemon_details.append(info)\n",
     "    else:\n",
     "        print(f\"Failed to retrieve data for Pokémon ID {pokemon_id}\") #Prints for inform the user that the pokemon was not fetched"
@@ -206,27 +214,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to pokemon_dataset.csv\n"
+      "Data saved to ../dataset/pokemon_dataset.csv\n"
      ]
     }
    ],
    "source": [
     "# Define the CSV file name\n",
-    "csv_filename = 'pokemon_dataset.csv'\n",
+    "csv_filename = '../dataset/pokemon_dataset.csv'\n",
     "\n",
     "# Define the column names for the CSV file\n",
     "fieldnames = [\n",
     "    'id', 'name', 'base_experience', 'height', 'weight', 'is_default', 'order', \n",
     "    'habitat', 'growth_rate', 'is_legendary', 'is_mythical', 'gender_rate', \n",
     "    'capture_rate', 'base_happiness', 'abilities', 'forms', 'held_items', 'moves', \n",
-    "    'types', 'hp', 'attack', 'defense', 'special-attack', 'special-defense', 'speed'\n",
+    "    'types', 'hp', 'attack', 'defense', 'special-attack', 'special-defense', 'speed', 'name_evolutions', 'level_evolutions'\n",
     "]\n",
     "\n",
     "# Write data to CSV\n",
@@ -253,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -261,257 +269,64 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Pokémon DataFrame:\n"
+      "Pokémon DataFrame:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1025 entries, 0 to 1024\n",
+      "Data columns (total 27 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   id                1025 non-null   int64  \n",
+      " 1   name              1025 non-null   object \n",
+      " 2   base_experience   1025 non-null   int64  \n",
+      " 3   height            1025 non-null   int64  \n",
+      " 4   weight            1025 non-null   int64  \n",
+      " 5   is_default        1025 non-null   bool   \n",
+      " 6   order             1025 non-null   int64  \n",
+      " 7   habitat           386 non-null    object \n",
+      " 8   growth_rate       1025 non-null   object \n",
+      " 9   is_legendary      1025 non-null   bool   \n",
+      " 10  is_mythical       1025 non-null   bool   \n",
+      " 11  gender_rate       1025 non-null   int64  \n",
+      " 12  capture_rate      1025 non-null   int64  \n",
+      " 13  base_happiness    1018 non-null   float64\n",
+      " 14  abilities         1025 non-null   object \n",
+      " 15  forms             1025 non-null   object \n",
+      " 16  held_items        1025 non-null   bool   \n",
+      " 17  moves             1025 non-null   object \n",
+      " 18  types             1025 non-null   object \n",
+      " 19  hp                1025 non-null   int64  \n",
+      " 20  attack            1025 non-null   int64  \n",
+      " 21  defense           1025 non-null   int64  \n",
+      " 22  special-attack    1025 non-null   int64  \n",
+      " 23  special-defense   1025 non-null   int64  \n",
+      " 24  speed             1025 non-null   int64  \n",
+      " 25  name_evolutions   457 non-null    object \n",
+      " 26  level_evolutions  341 non-null    float64\n",
+      "dtypes: bool(4), float64(2), int64(13), object(8)\n",
+      "memory usage: 188.3+ KB\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>base_experience</th>\n",
-       "      <th>height</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>is_default</th>\n",
-       "      <th>order</th>\n",
-       "      <th>habitat</th>\n",
-       "      <th>growth_rate</th>\n",
-       "      <th>is_legendary</th>\n",
-       "      <th>...</th>\n",
-       "      <th>forms</th>\n",
-       "      <th>held_items</th>\n",
-       "      <th>moves</th>\n",
-       "      <th>types</th>\n",
-       "      <th>hp</th>\n",
-       "      <th>attack</th>\n",
-       "      <th>defense</th>\n",
-       "      <th>special-attack</th>\n",
-       "      <th>special-defense</th>\n",
-       "      <th>speed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Charmeleon</td>\n",
-       "      <td>142</td>\n",
-       "      <td>11</td>\n",
-       "      <td>190</td>\n",
-       "      <td>True</td>\n",
-       "      <td>6</td>\n",
-       "      <td>mountain</td>\n",
-       "      <td>medium-slow</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>charmeleon</td>\n",
-       "      <td>False</td>\n",
-       "      <td>mega-punch, fire-punch, thunder-punch, scratch...</td>\n",
-       "      <td>fire</td>\n",
-       "      <td>58</td>\n",
-       "      <td>64</td>\n",
-       "      <td>58</td>\n",
-       "      <td>80</td>\n",
-       "      <td>65</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Charizard</td>\n",
-       "      <td>267</td>\n",
-       "      <td>17</td>\n",
-       "      <td>905</td>\n",
-       "      <td>True</td>\n",
-       "      <td>7</td>\n",
-       "      <td>mountain</td>\n",
-       "      <td>medium-slow</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>charizard</td>\n",
-       "      <td>False</td>\n",
-       "      <td>mega-punch, fire-punch, thunder-punch, scratch...</td>\n",
-       "      <td>fire, flying</td>\n",
-       "      <td>78</td>\n",
-       "      <td>84</td>\n",
-       "      <td>78</td>\n",
-       "      <td>109</td>\n",
-       "      <td>85</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Squirtle</td>\n",
-       "      <td>63</td>\n",
-       "      <td>5</td>\n",
-       "      <td>90</td>\n",
-       "      <td>True</td>\n",
-       "      <td>10</td>\n",
-       "      <td>waters-edge</td>\n",
-       "      <td>medium-slow</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>squirtle</td>\n",
-       "      <td>False</td>\n",
-       "      <td>mega-punch, ice-punch, mega-kick, headbutt, ta...</td>\n",
-       "      <td>water</td>\n",
-       "      <td>44</td>\n",
-       "      <td>48</td>\n",
-       "      <td>65</td>\n",
-       "      <td>50</td>\n",
-       "      <td>64</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Wartortle</td>\n",
-       "      <td>142</td>\n",
-       "      <td>10</td>\n",
-       "      <td>225</td>\n",
-       "      <td>True</td>\n",
-       "      <td>11</td>\n",
-       "      <td>waters-edge</td>\n",
-       "      <td>medium-slow</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>wartortle</td>\n",
-       "      <td>False</td>\n",
-       "      <td>mega-punch, ice-punch, mega-kick, headbutt, ta...</td>\n",
-       "      <td>water</td>\n",
-       "      <td>59</td>\n",
-       "      <td>63</td>\n",
-       "      <td>80</td>\n",
-       "      <td>65</td>\n",
-       "      <td>80</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Blastoise</td>\n",
-       "      <td>265</td>\n",
-       "      <td>16</td>\n",
-       "      <td>855</td>\n",
-       "      <td>True</td>\n",
-       "      <td>12</td>\n",
-       "      <td>waters-edge</td>\n",
-       "      <td>medium-slow</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>blastoise</td>\n",
-       "      <td>False</td>\n",
-       "      <td>mega-punch, ice-punch, mega-kick, headbutt, ta...</td>\n",
-       "      <td>water</td>\n",
-       "      <td>79</td>\n",
-       "      <td>83</td>\n",
-       "      <td>100</td>\n",
-       "      <td>85</td>\n",
-       "      <td>105</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Caterpie</td>\n",
-       "      <td>39</td>\n",
-       "      <td>3</td>\n",
-       "      <td>29</td>\n",
-       "      <td>True</td>\n",
-       "      <td>14</td>\n",
-       "      <td>forest</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>caterpie</td>\n",
-       "      <td>False</td>\n",
-       "      <td>tackle, string-shot, snore, bug-bite, electroweb</td>\n",
-       "      <td>bug</td>\n",
-       "      <td>45</td>\n",
-       "      <td>30</td>\n",
-       "      <td>35</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6 rows × 25 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id        name  base_experience  height  weight  is_default  order  \\\n",
-       "0   5  Charmeleon              142      11     190        True      6   \n",
-       "1   6   Charizard              267      17     905        True      7   \n",
-       "2   7    Squirtle               63       5      90        True     10   \n",
-       "3   8   Wartortle              142      10     225        True     11   \n",
-       "4   9   Blastoise              265      16     855        True     12   \n",
-       "5  10    Caterpie               39       3      29        True     14   \n",
-       "\n",
-       "       habitat  growth_rate  is_legendary  ...       forms  held_items  \\\n",
-       "0     mountain  medium-slow         False  ...  charmeleon       False   \n",
-       "1     mountain  medium-slow         False  ...   charizard       False   \n",
-       "2  waters-edge  medium-slow         False  ...    squirtle       False   \n",
-       "3  waters-edge  medium-slow         False  ...   wartortle       False   \n",
-       "4  waters-edge  medium-slow         False  ...   blastoise       False   \n",
-       "5       forest       medium         False  ...    caterpie       False   \n",
-       "\n",
-       "                                               moves         types  hp attack  \\\n",
-       "0  mega-punch, fire-punch, thunder-punch, scratch...          fire  58     64   \n",
-       "1  mega-punch, fire-punch, thunder-punch, scratch...  fire, flying  78     84   \n",
-       "2  mega-punch, ice-punch, mega-kick, headbutt, ta...         water  44     48   \n",
-       "3  mega-punch, ice-punch, mega-kick, headbutt, ta...         water  59     63   \n",
-       "4  mega-punch, ice-punch, mega-kick, headbutt, ta...         water  79     83   \n",
-       "5   tackle, string-shot, snore, bug-bite, electroweb           bug  45     30   \n",
-       "\n",
-       "   defense special-attack special-defense  speed  \n",
-       "0       58             80              65     80  \n",
-       "1       78            109              85    100  \n",
-       "2       65             50              64     43  \n",
-       "3       80             65              80     58  \n",
-       "4      100             85             105     78  \n",
-       "5       35             20              20     45  \n",
-       "\n",
-       "[6 rows x 25 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Now create a pandas DataFrame from the CSV file\n",
-    "df = pd.read_csv(csv_filename)\n",
+    "df_pokemon = pd.read_csv(csv_filename)\n",
     "\n",
     "# Show the DataFrame\n",
     "print(\"\\nPokémon DataFrame:\")\n",
-    "df\n"
+    "df_pokemon.info()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ssmm-env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
