Remove unnecessary code

--- a/web_scraping/dataset_webscraping.ipynb
+++ b/web_scraping/dataset_webscraping.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -249,79 +249,9 @@
     "        if isinstance(pokemon, dict):\n",
     "            writer.writerow(pokemon)\n",
     "\n",
+    "# Success message\n",
     "print(f\"Data saved to {csv_filename}\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Load the csv as a dataframe**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Pokémon DataFrame:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1025 entries, 0 to 1024\n",
-      "Data columns (total 27 columns):\n",
-      " #   Column            Non-Null Count  Dtype  \n",
-      "---  ------            --------------  -----  \n",
-      " 0   id                1025 non-null   int64  \n",
-      " 1   name              1025 non-null   object \n",
-      " 2   base_experience   1025 non-null   int64  \n",
-      " 3   height            1025 non-null   int64  \n",
-      " 4   weight            1025 non-null   int64  \n",
-      " 5   is_default        1025 non-null   bool   \n",
-      " 6   order             1025 non-null   int64  \n",
-      " 7   habitat           386 non-null    object \n",
-      " 8   growth_rate       1025 non-null   object \n",
-      " 9   is_legendary      1025 non-null   bool   \n",
-      " 10  is_mythical       1025 non-null   bool   \n",
-      " 11  gender_rate       1025 non-null   int64  \n",
-      " 12  capture_rate      1025 non-null   int64  \n",
-      " 13  base_happiness    1018 non-null   float64\n",
-      " 14  abilities         1025 non-null   object \n",
-      " 15  forms             1025 non-null   object \n",
-      " 16  held_items        1025 non-null   bool   \n",
-      " 17  moves             1025 non-null   object \n",
-      " 18  types             1025 non-null   object \n",
-      " 19  hp                1025 non-null   int64  \n",
-      " 20  attack            1025 non-null   int64  \n",
-      " 21  defense           1025 non-null   int64  \n",
-      " 22  special-attack    1025 non-null   int64  \n",
-      " 23  special-defense   1025 non-null   int64  \n",
-      " 24  speed             1025 non-null   int64  \n",
-      " 25  name_evolutions   457 non-null    object \n",
-      " 26  level_evolutions  341 non-null    float64\n",
-      "dtypes: bool(4), float64(2), int64(13), object(8)\n",
-      "memory usage: 188.3+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Now create a pandas DataFrame from the CSV file\n",
-    "df_pokemon = pd.read_csv(csv_filename)\n",
-    "\n",
-    "# Show the DataFrame\n",
-    "print(\"\\nPokémon DataFrame:\")\n",
-    "df_pokemon.info()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
